# brother-akinator

./: .gitignore  pyproject.toml  readme.md
src/: main.py  window.py
src/sprites/: readme.md
src/util/: audio.py  constants.py
src/views/: guess_menu.py  main_menu.py  pause_menu.py  questions_menu.py  settigs.py  settings.py  settings_menu.py
