[project]
authors = [{name = "Travis", email = "119350720+Tmino1@users.noreply.github.com"}]
dependencies = ["arcade>=3.3.3,<4"]
name = "brother_akinator"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
brother_akinator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scikit-learn = ">=1.7.2,<2"
